added new "prettier" button + new wallpapers

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button class="apply" onclick="changeRandomBackground()">
           Change Background
         </button>
+        <button onclick="changeBetterRandomBackground()">
+          🎀✨✨💅
+        </button>
         <label>
           Change Color of clock
           <input type="color" id="inputColor" oninput="changeClockColor()" />
